--- a/src/App.css
+++ b/src/App.css
@@ -39,9 +39,8 @@
 
 
 .cardContainer {
-  width: 90vw;
-  max-width: 260px;
-  height: 300px;
+  width: 100%;
+  height: 100%;
 }
 
 .card {
@@ -63,4 +62,11 @@
 
 .swipe {
   position: absolute;
+  height: 100%;
+  width: 100%;
+}
+
+.swipeDesisionBox {
+  position: absolute;
+  bottom: 10px;
 }
