adjust image size

--- a/src/App.css
+++ b/src/App.css
@@ -39,20 +39,25 @@
 
 
 .cardContainer {
+  flex: 1;  /* чтобы элемент занимал все доступное пространство, исключая другие элементы */
   width: 100%;
-  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
+
+
 
 .card {
   position: relative;
   background-color: #fff;
-  width: 80vw;
-  max-width: 260px;
-  height: 300px;
+  object-fit: cover;
   box-shadow: 0px 0px 60px 0px rgba(0,0,0,0.30);
   border-radius: 20px;
   background-size: cover;
   background-position: center;
+  height: calc(100vh - 64px);
+  width: 100%;
 }
 
 .cardContent {
@@ -61,9 +66,10 @@
 }
 
 .swipe {
-  position: absolute;
-  height: 100%;
   width: 100%;
+  height: calc(100vh - 64px);
+  position: absolute;
+  overflow: hidden;
 }
 
 .swipeDesisionBox {
