--- a/src/App.css
+++ b/src/App.css
@@ -56,7 +56,7 @@
   border-radius: 20px;
   background-size: cover;
   background-position: center;
-  height: calc(100vh - 64px);
+  height: auto;
   width: 100%;
 }
 
