--- a/src/App.css
+++ b/src/App.css
@@ -49,14 +49,13 @@
 
 
 .card {
-  position: relative;
   background-color: #fff;
   object-fit: cover;
   box-shadow: 0px 0px 60px 0px rgba(0,0,0,0.30);
   border-radius: 20px;
   background-size: cover;
   background-position: center;
-  height: calc(100vh - 64px);
+  height: auto;
   width: 100%;
 }
 
