--- a/src/App.css
+++ b/src/App.css
@@ -80,9 +80,23 @@
   position: absolute;
   bottom: 10px;  /* отступ от нижнего края */
   left: 10px;  /* отступ от левого края */
-  color: white;
-  background-color: rgba(0, 0, 0, 0.5);  /* полупрозрачный черный фон для лучшей читаемости */
+  background-color: #C2EFD3;
+  color: #023825;
   padding: 5px 10px;
   border-radius: 8px;
 }
 
+.tinderCard {
+  background-color: #f5f5f5;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-width: 100%;
+  min-height: 100%;
+  position: absolute;
+}
+
+.cardItem {
+  position: absolute;
+  width: 100%;
+}
